[gd_scene load_steps=8 format=2]

[ext_resource path="res://plant/grayscale.tres" type="Material" id=1]
[ext_resource path="res://plant/plant.tscn" type="PackedScene" id=2]
[ext_resource path="res://map/stage.gd" type="Script" id=3]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://map/tiles.tres" type="TileSet" id=5]
[ext_resource path="res://plant/pot.tscn" type="PackedScene" id=6]
[ext_resource path="res://skeleton/skeleton.tscn" type="PackedScene" id=7]

[node name="Stage" type="Node2D"]
pause_mode = 1
script = ExtResource( 3 )
stage_name = "The Garden"

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 8, 8 )
cell_y_sort = true
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 1, 2, 1, 1, 3, 1, 1, 4, 1, 1, 5, 1, 1, 6, 1, 1, 7, 1, 1, 8, 1, 1, 9, 1, 1, 10, 1, 1, 11, 1, 1, 12, 1, 1, 13, 1, 1, 14, 1, 1, 15, 1, 1, 16, 1, 1, 17, 1, 1, 18, 1, 1, 19, 1, 1, 20, 1, 1, 21, 1, 1, 22, 1, 1, 23, 1, 1, 24, 1, 1, 25, 1, 1, 26, 1, 1, 27, 1, 1, 28, 1, 1, 29, 1, 1, 30, 1, 1, 31, 1, 1, 32, 1, 1, 33, 1, 1, 34, 1, 1, 35, 1, 1, 36, 1, 1, 37, 1, 1, 38, 1, 1, 39, 1, 1, 40, 1, 1, 41, 1, 1, 42, 1, 1, 43, 1, 1, 44, 1, 1, 45, 1, 1, 46, 1, 1, 47, 1, 1, 48, 1, 1, 49, 1, 1, 50, 1, 1, 51, 1, 1, 52, 1, 1, 53, 1, 1, 54, 1, 1, 55, 1, 1, 56, 1, 1, 57, 1, 1, 58, 1, 1, 59, 1, 1, 60, 1, 1, 61, 1, 1, 62, 1, 1, 63, 1, 1, 64, 1, 1, 65, 1, 2, 65536, 1, 65536, 65537, 1, 65537, 65538, 1, 65537, 65539, 1, 65537, 65540, 1, 0, 65541, 1, 131073, 65542, 1, 131073, 65543, 1, 131073, 65544, 1, 131073, 65545, 1, 131073, 65546, 1, 131073, 65547, 1, 131073, 65548, 1, 131073, 65549, 1, 131073, 65550, 1, 131073, 65551, 1, 131073, 65552, 1, 131073, 65553, 1, 131073, 65554, 1, 131073, 65555, 1, 131073, 65556, 1, 131073, 65557, 1, 131073, 65558, 1, 131073, 65559, 1, 131073, 65560, 1, 131073, 65561, 1, 131073, 65562, 1, 131073, 65563, 1, 131073, 65564, 1, 131073, 65565, 1, 131073, 65566, 1, 131073, 65567, 1, 131073, 65568, 1, 131073, 65569, 1, 131073, 65570, 1, 131073, 65571, 1, 131073, 65572, 1, 131073, 65573, 1, 131073, 65574, 1, 131073, 65575, 1, 131073, 65576, 1, 131073, 65577, 1, 131073, 65578, 1, 131073, 65579, 1, 131073, 65580, 1, 131073, 65581, 1, 131073, 65582, 1, 131073, 65583, 1, 131073, 65584, 1, 131073, 65585, 1, 131073, 65586, 1, 131073, 65587, 1, 131073, 65588, 1, 131073, 65589, 1, 131073, 65590, 1, 131073, 65591, 1, 131073, 65592, 1, 131073, 65593, 1, 131073, 65594, 1, 131073, 65595, 1, 131073, 65596, 1, 131073, 65597, 1, 0, 65598, 1, 65537, 65599, 1, 65537, 65600, 1, 65537, 65601, 1, 65538, 131072, 1, 65536, 131073, 1, 65537, 131074, 1, 65537, 131075, 1, 0, 131076, 1, 131074, 131081, 2, 0, 131082, 2, 0, 131083, 2, 0, 131085, 2, 0, 131087, 2, 0, 131088, 2, 0, 131122, 2, 0, 131123, 2, 0, 131124, 2, 0, 131125, 2, 0, 131126, 2, 0, 131127, 2, 0, 131128, 2, 0, 131129, 2, 0, 131133, 1, 131072, 131134, 1, 0, 131135, 1, 65537, 131136, 1, 65537, 131137, 1, 65538, 196608, 1, 65536, 196609, 1, 65537, 196610, 1, 0, 196611, 1, 131074, 196618, 2, 0, 196619, 2, 0, 196620, 2, 0, 196621, 2, 0, 196622, 2, 0, 196623, 2, 0, 196659, 2, 0, 196660, 2, 0, 196661, 2, 0, 196662, 2, 0, 196663, 2, 0, 196664, 2, 0, 196670, 1, 131072, 196671, 1, 0, 196672, 1, 65537, 196673, 1, 65538, 262144, 1, 65536, 262145, 1, 0, 262146, 1, 131074, 262176, 2, 0, 262207, 1, 131072, 262208, 1, 0, 262209, 1, 65538, 327680, 1, 65536, 327681, 1, 65538, 327710, 2, 0, 327728, 2, 0, 327729, 2, 0, 327744, 1, 65536, 327745, 1, 65538, 393216, 1, 65536, 393217, 1, 65538, 393231, 2, 0, 393241, 2, 0, 393280, 1, 65536, 393281, 1, 65538, 458752, 1, 65536, 458753, 1, 65538, 458766, 2, 1, 458767, 2, 1, 458768, 2, 1, 458816, 1, 65536, 458817, 1, 65538, 524288, 1, 65536, 524289, 1, 65538, 524302, 2, 1, 524305, 2, 1, 524346, 2, 0, 524347, 2, 0, 524348, 2, 0, 524352, 1, 65536, 524353, 1, 65538, 589824, 1, 65536, 589825, 1, 65538, 589838, 2, 1, 589841, 2, 1, 589845, 2, 1, 589846, 2, 0, 589872, 2, 0, 589880, 2, 1, 589881, 2, 0, 589882, 2, 0, 589883, 2, 0, 589884, 2, 0, 589885, 2, 0, 589888, 1, 65536, 589889, 1, 65538, 655360, 1, 65536, 655361, 1, 65538, 655365, 2, 0, 655374, 2, 1, 655375, 2, 1, 655376, 2, 1, 655377, 2, 1, 655417, 2, 1, 655418, 2, 0, 655420, 2, 0, 655421, 2, 0, 655424, 1, 65536, 655425, 1, 65538, 720896, 1, 65536, 720897, 1, 65538, 720908, 2, 0, 720951, 2, 1, 720952, 2, 1, 720953, 2, 1, 720954, 2, 1, 720955, 2, 1, 720956, 2, 0, 720960, 1, 65536, 720961, 1, 65538, 786432, 1, 65536, 786433, 1, 65538, 786438, 2, 1, 786439, 2, 0, 786444, 2, 0, 786445, 2, 0, 786461, 2, 0, 786462, 2, 0, 786463, 2, 0, 786486, 2, 1, 786487, 2, 1, 786488, 2, 1, 786489, 2, 1, 786490, 2, 0, 786491, 2, 1, 786496, 1, 65536, 786497, 1, 65538, 851968, 1, 65536, 851969, 1, 65538, 851973, 2, 1, 851974, 2, 0, 851975, 2, 1, 851976, 2, 0, 851979, 2, 1, 851980, 2, 1, 851981, 2, 1, 851982, 2, 0, 851987, 2, 1, 851996, 2, 0, 851997, 2, 0, 851999, 2, 0, 852000, 2, 0, 852001, 2, 0, 852008, 2, 1, 852010, 2, 1, 852011, 2, 1, 852015, 2, 1, 852016, 2, 1, 852018, 2, 1, 852019, 2, 1, 852020, 2, 1, 852022, 2, 1, 852023, 2, 0, 852026, 2, 1, 852027, 2, 1, 852032, 1, 65536, 852033, 1, 65538, 917504, 1, 65536, 917505, 1, 65538, 917509, 2, 1, 917510, 2, 0, 917511, 2, 0, 917512, 2, 1, 917515, 2, 0, 917518, 2, 0, 917522, 2, 1, 917523, 2, 1, 917524, 2, 1, 917525, 2, 1, 917526, 2, 1, 917527, 2, 1, 917535, 2, 1, 917547, 2, 1, 917554, 2, 1, 917555, 2, 1, 917556, 2, 1, 917558, 2, 1, 917559, 2, 1, 917562, 2, 1, 917563, 2, 1, 917568, 1, 65536, 917569, 1, 65538, 983040, 1, 65536, 983041, 1, 65538, 983046, 2, 1, 983047, 2, 1, 983051, 2, 0, 983052, 2, 0, 983054, 2, 1, 983055, 2, 0, 983058, 2, 1, 983061, 2, 1, 983062, 2, 1, 983063, 2, 1, 983064, 2, 1, 983068, 2, 1, 983074, 2, 0, 983077, 2, 1, 983095, 2, 1, 983096, 2, 1, 983097, 2, 1, 983098, 2, 1, 983099, 2, 1, 983104, 1, 65536, 983105, 1, 65538, 1048576, 1, 65536, 1048577, 1, 65538, 1048588, 2, 1, 1048589, 2, 0, 1048590, 2, 0, 1048591, 2, 1, 1048592, 2, 1, 1048593, 2, 0, 1048594, 2, 0, 1048595, 2, 1, 1048596, 2, 1, 1048597, 2, 1, 1048601, 2, 0, 1048603, 2, 0, 1048605, 2, 0, 1048608, 2, 0, 1048631, 2, 1, 1048632, 2, 1, 1048633, 2, 1, 1048640, 1, 65536, 1048641, 1, 65538, 1114112, 1, 65536, 1114113, 1, 65538, 1114123, 2, 0, 1114124, 2, 0, 1114125, 2, 0, 1114126, 2, 0, 1114127, 2, 1, 1114128, 2, 1, 1114129, 2, 0, 1114130, 2, 0, 1114131, 2, 0, 1114139, 2, 0, 1114141, 2, 1, 1114143, 2, 0, 1114144, 2, 0, 1114168, 2, 0, 1114169, 2, 0, 1114174, 2, 0, 1114175, 2, 0, 1114176, 1, 65536, 1114177, 1, 65538, 1179648, 1, 65536, 1179649, 1, 65538, 1179661, 2, 0, 1179662, 2, 0, 1179665, 2, 1, 1179666, 2, 1, 1179677, 2, 0, 1179678, 2, 0, 1179679, 2, 0, 1179703, 2, 0, 1179704, 2, 0, 1179705, 2, 0, 1179709, 2, 0, 1179710, 2, 0, 1179711, 2, 0, 1179712, 1, 65536, 1179713, 1, 65538, 1245184, 1, 65536, 1245185, 1, 65538, 1245197, 2, 0, 1245198, 2, 0, 1245201, 2, 1, 1245208, 2, 0, 1245238, 2, 0, 1245241, 2, 0, 1245245, 2, 0, 1245246, 2, 0, 1245248, 1, 65536, 1245249, 1, 65538, 1310720, 1, 65536, 1310721, 1, 65538, 1310730, 2, 0, 1310735, 2, 1, 1310736, 2, 1, 1310737, 2, 1, 1310742, 2, 0, 1310744, 2, 0, 1310745, 2, 0, 1310763, 2, 0, 1310764, 2, 0, 1310765, 2, 0, 1310774, 2, 0, 1310775, 2, 0, 1310776, 2, 0, 1310777, 2, 0, 1310782, 2, 0, 1310783, 2, 0, 1310784, 1, 65536, 1310785, 1, 65538, 1376256, 1, 65536, 1376257, 1, 65538, 1376320, 1, 65536, 1376321, 1, 65538, 1441792, 1, 65536, 1441793, 1, 65538, 1441812, 2, 0, 1441853, 2, 0, 1441856, 1, 65536, 1441857, 1, 65538, 1507328, 1, 65536, 1507329, 1, 0, 1507330, 1, 2, 1507359, 2, 0, 1507360, 2, 0, 1507361, 2, 0, 1507380, 2, 0, 1507381, 2, 0, 1507391, 1, 0, 1507392, 1, 0, 1507393, 1, 65538, 1572864, 1, 65536, 1572865, 1, 65537, 1572866, 1, 0, 1572867, 1, 2, 1572916, 2, 0, 1572918, 2, 0, 1572926, 1, 0, 1572927, 1, 0, 1572928, 1, 65537, 1572929, 1, 65538, 1638400, 1, 65536, 1638401, 1, 65537, 1638402, 1, 65537, 1638403, 1, 0, 1638404, 1, 2, 1638461, 1, 0, 1638462, 1, 0, 1638463, 1, 65537, 1638464, 1, 65537, 1638465, 1, 65538, 1703936, 1, 65536, 1703937, 1, 65537, 1703938, 1, 65537, 1703939, 1, 65537, 1703940, 1, 0, 1703941, 1, 1, 1703942, 1, 1, 1703943, 1, 1, 1703944, 1, 1, 1703945, 1, 1, 1703946, 1, 1, 1703947, 1, 1, 1703948, 1, 1, 1703949, 1, 1, 1703950, 1, 1, 1703951, 1, 1, 1703952, 1, 1, 1703953, 1, 1, 1703954, 1, 1, 1703955, 1, 1, 1703956, 1, 1, 1703957, 1, 1, 1703958, 1, 1, 1703959, 1, 1, 1703960, 1, 1, 1703961, 1, 1, 1703962, 1, 1, 1703963, 1, 1, 1703964, 1, 1, 1703965, 1, 1, 1703966, 1, 1, 1703967, 1, 1, 1703968, 1, 1, 1703969, 1, 1, 1703970, 1, 1, 1703971, 1, 1, 1703972, 1, 1, 1703973, 1, 1, 1703974, 1, 1, 1703975, 1, 1, 1703976, 1, 1, 1703977, 1, 1, 1703978, 1, 1, 1703979, 1, 1, 1703980, 1, 1, 1703981, 1, 1, 1703982, 1, 1, 1703983, 1, 1, 1703984, 1, 1, 1703985, 1, 1, 1703986, 1, 1, 1703987, 1, 1, 1703988, 1, 1, 1703989, 1, 1, 1703990, 1, 1, 1703991, 1, 1, 1703992, 1, 1, 1703993, 1, 1, 1703994, 1, 1, 1703995, 1, 1, 1703996, 1, 1, 1703997, 1, 0, 1703998, 1, 65537, 1703999, 1, 65537, 1704000, 1, 65537, 1704001, 1, 65538, 1769472, 1, 131072, 1769473, 1, 131073, 1769474, 1, 131073, 1769475, 1, 131073, 1769476, 1, 131073, 1769477, 1, 131073, 1769478, 1, 131073, 1769479, 1, 131073, 1769480, 1, 131073, 1769481, 1, 131073, 1769482, 1, 131073, 1769483, 1, 131073, 1769484, 1, 131073, 1769485, 1, 131073, 1769486, 1, 131073, 1769487, 1, 131073, 1769488, 1, 131073, 1769489, 1, 131073, 1769490, 1, 131073, 1769491, 1, 131073, 1769492, 1, 131073, 1769493, 1, 131073, 1769494, 1, 131073, 1769495, 1, 131073, 1769496, 1, 131073, 1769497, 1, 131073, 1769498, 1, 131073, 1769499, 1, 131073, 1769500, 1, 131073, 1769501, 1, 131073, 1769502, 1, 131073, 1769503, 1, 131073, 1769504, 1, 131073, 1769505, 1, 131073, 1769506, 1, 131073, 1769507, 1, 131073, 1769508, 1, 131073, 1769509, 1, 131073, 1769510, 1, 131073, 1769511, 1, 131073, 1769512, 1, 131073, 1769513, 1, 131073, 1769514, 1, 131073, 1769515, 1, 131073, 1769516, 1, 131073, 1769517, 1, 131073, 1769518, 1, 131073, 1769519, 1, 131073, 1769520, 1, 131073, 1769521, 1, 131073, 1769522, 1, 131073, 1769523, 1, 131073, 1769524, 1, 131073, 1769525, 1, 131073, 1769526, 1, 131073, 1769527, 1, 131073, 1769528, 1, 131073, 1769529, 1, 131073, 1769530, 1, 131073, 1769531, 1, 131073, 1769532, 1, 131073, 1769533, 1, 131073, 1769534, 1, 131073, 1769535, 1, 131073, 1769536, 1, 131073, 1769537, 1, 131074 )

[node name="Plants" type="YSort" parent="TileMap"]
material = ExtResource( 1 )

[node name="Plant1" parent="TileMap/Plants" instance=ExtResource( 2 )]
use_parent_material = true
position = Vector2( 100, 20 )

[node name="Plant2" parent="TileMap/Plants" instance=ExtResource( 2 )]
use_parent_material = true
position = Vector2( 244, 140 )

[node name="Plant3" parent="TileMap/Plants" instance=ExtResource( 2 )]
use_parent_material = true
position = Vector2( 108, 116 )

[node name="Plant4" parent="TileMap/Plants" instance=ExtResource( 2 )]
use_parent_material = true
position = Vector2( 116, 172 )

[node name="Plant5" parent="TileMap/Plants" instance=ExtResource( 2 )]
use_parent_material = true
position = Vector2( 268, 84 )

[node name="Plant6" parent="TileMap/Plants" instance=ExtResource( 2 )]
use_parent_material = true
position = Vector2( 116, 20 )

[node name="Plant7" parent="TileMap/Plants" instance=ExtResource( 2 )]
use_parent_material = true
position = Vector2( 476, 84 )

[node name="Plant8" parent="TileMap/Plants" instance=ExtResource( 2 )]
use_parent_material = true
position = Vector2( 452, 156 )

[node name="Plant15" parent="TileMap/Plants" instance=ExtResource( 2 )]
use_parent_material = true
position = Vector2( 444, 156 )

[node name="Plant16" parent="TileMap/Plants" instance=ExtResource( 2 )]
use_parent_material = true
position = Vector2( 428, 196 )

[node name="Plant9" parent="TileMap/Plants" instance=ExtResource( 2 )]
use_parent_material = true
position = Vector2( 508, 156 )

[node name="Plant10" parent="TileMap/Plants" instance=ExtResource( 2 )]
use_parent_material = true
position = Vector2( 164, 124 )

[node name="Plant11" parent="TileMap/Plants" instance=ExtResource( 2 )]
use_parent_material = true
position = Vector2( 156, 124 )

[node name="Plant12" parent="TileMap/Plants" instance=ExtResource( 2 )]
use_parent_material = true
position = Vector2( 108, 124 )

[node name="Plant14" parent="TileMap/Plants" instance=ExtResource( 2 )]
use_parent_material = true
position = Vector2( 244, 108 )

[node name="Plant13" parent="TileMap/Plants" instance=ExtResource( 2 )]
use_parent_material = true
position = Vector2( 101, 116 )

[node name="YSort" type="YSort" parent="TileMap"]

[node name="Skeleton1" parent="TileMap/YSort" instance=ExtResource( 7 )]
position = Vector2( 376, 40 )

[node name="Skeleton2" parent="TileMap/YSort" instance=ExtResource( 7 )]
position = Vector2( 376, 184 )

[node name="Skeleton3" parent="TileMap/YSort" instance=ExtResource( 7 )]
position = Vector2( 296, 40 )

[node name="Skeleton4" parent="TileMap/YSort" instance=ExtResource( 7 )]
position = Vector2( 192, 40 )

[node name="Skeleton5" parent="TileMap/YSort" instance=ExtResource( 7 )]
position = Vector2( 296, 176 )

[node name="Skeleton6" parent="TileMap/YSort" instance=ExtResource( 7 )]
position = Vector2( 344, 112 )

[node name="Skeleton7" parent="TileMap/YSort" instance=ExtResource( 7 )]
position = Vector2( 432, 48 )

[node name="Skeleton8" parent="TileMap/YSort" instance=ExtResource( 7 )]
position = Vector2( 392, 160 )

[node name="Skeleton9" parent="TileMap/YSort" instance=ExtResource( 7 )]
position = Vector2( 416, 112 )

[node name="Skeleton10" parent="TileMap/YSort" instance=ExtResource( 7 )]
position = Vector2( 176, 176 )

[node name="Skeleton11" parent="TileMap/YSort" instance=ExtResource( 7 )]
position = Vector2( 64, 64 )

[node name="Skeleton12" parent="TileMap/YSort" instance=ExtResource( 7 )]
position = Vector2( 128, 40 )

[node name="Skeleton13" parent="TileMap/YSort" instance=ExtResource( 7 )]
position = Vector2( 64, 176 )

[node name="Skeleton14" parent="TileMap/YSort" instance=ExtResource( 7 )]
position = Vector2( 488, 56 )

[node name="Skeleton15" parent="TileMap/YSort" instance=ExtResource( 7 )]
position = Vector2( 488, 120 )

[node name="Skeleton16" parent="TileMap/YSort" instance=ExtResource( 7 )]
position = Vector2( 472, 200 )

[node name="Skeleton17" parent="TileMap/YSort" instance=ExtResource( 7 )]
position = Vector2( 304, 96 )

[node name="Skeleton18" parent="TileMap/YSort" instance=ExtResource( 7 )]
position = Vector2( 240, 176 )

[node name="Skeleton19" parent="TileMap/YSort" instance=ExtResource( 7 )]
position = Vector2( 192, 88 )

[node name="Skeleton20" parent="TileMap/YSort" instance=ExtResource( 7 )]
position = Vector2( 344, 64 )

[node name="Skeleton21" parent="TileMap/YSort" instance=ExtResource( 7 )]
position = Vector2( 248, 72 )

[node name="Pot1" parent="TileMap" instance=ExtResource( 6 )]
position = Vector2( 128, 76 )
parts_needed = 3

[node name="Pot2" parent="TileMap" instance=ExtResource( 6 )]
position = Vector2( 128, 156 )
parts_needed = 3

[node name="Pot3" parent="TileMap" instance=ExtResource( 6 )]
position = Vector2( 456, 116 )
parts_needed = 3

[node name="PlayerStart" type="Position2D" parent="TileMap"]
position = Vector2( 56, 112 )

[node name="Player" parent="TileMap" instance=ExtResource( 4 )]
position = Vector2( 56, 112 )

[connection signal="planted" from="TileMap/Pot1" to="." method="_on_pot_planted"]
[connection signal="planted" from="TileMap/Pot2" to="." method="_on_pot_planted"]
[connection signal="planted" from="TileMap/Pot3" to="." method="_on_pot_planted"]
[connection signal="collect" from="TileMap/Player" to="." method="_on_player_collect"]
[connection signal="die" from="TileMap/Player" to="." method="_on_player_die"]
